wrappers/go/pkg/windows_amd64/include/virgil/crypto/foundation/vscf_aes128_kw.h

//  @license
// --------------------------------------------------------------------------
//  Copyright (C) 2015-2026 Virgil Security, Inc.
//
//  All rights reserved.
//
//  Redistribution and use in source and binary forms, with or without
//  modification, are permitted provided that the following conditions are
//  met:
//
//  (1) Redistributions of source code must retain the above copyright
//  notice, this list of conditions and the following disclaimer.
//
//  (2) Redistributions in binary form must reproduce the above copyright
//  notice, this list of conditions and the following disclaimer in
//  the documentation and/or other materials provided with the
//  distribution.
//
//  (3) Neither the name of the copyright holder nor the names of its
//  contributors may be used to endorse or promote products derived from
//  this software without specific prior written permission.
//
//  THIS SOFTWARE IS PROVIDED BY THE AUTHOR ''AS IS'' AND ANY EXPRESS OR
//  IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
//  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
//  DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
//  INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
//  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
//  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
//  HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
//  STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
//  IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
//  POSSIBILITY OF SUCH DAMAGE.
//
//  Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
// --------------------------------------------------------------------------
// clang-format off

//  @warning
// --------------------------------------------------------------------------
//  This file is partially generated.
//  Generated blocks are enclosed between tags [@<tag>, @end].
//  User's code can be added between tags [@end, @<tag>].
// --------------------------------------------------------------------------

//  @description
// --------------------------------------------------------------------------
//  //
//  //  This module contains 'aes128 kw' implementation.
//  //
// --------------------------------------------------------------------------

#ifndef VSCF_AES128_KW_H_INCLUDED
#define VSCF_AES128_KW_H_INCLUDED

#if !VSCF_IMPORT_PROJECT_COMMON_FROM_FRAMEWORK
#   include <virgil/crypto/common/vsc_data.h>
#   include <virgil/crypto/common/vsc_buffer.h>
#endif

#if VSCF_IMPORT_PROJECT_COMMON_FROM_FRAMEWORK
#   include <VSCCommon/vsc_data.h>
#   include <VSCCommon/vsc_buffer.h>
#endif

// clang-format on
//  @end

//  @generated_header_includes
// --------------------------------------------------------------------------
// clang-format off
//  Generated header includes start.
// --------------------------------------------------------------------------

#include "vscf_library.h"
#include "vscf_impl.h"
#include "vscf_alg_id.h"
#include "vscf_status.h"

// --------------------------------------------------------------------------
//  Generated section end.
// clang-format on
// --------------------------------------------------------------------------
//  @end


#ifdef __cplusplus
extern "C" {
#endif

//  @generated
// --------------------------------------------------------------------------
// clang-format off
//  Generated section start.
// --------------------------------------------------------------------------

//
//  Handles implementation details.
//
typedef struct vscf_aes128_kw_t vscf_aes128_kw_t;

//
//  Return size of 'vscf_aes128_kw_t' type.
//
VSCF_PUBLIC size_t
vscf_aes128_kw_impl_size(void);

//
//  Cast to the 'vscf_impl_t' type.
//
VSCF_PUBLIC vscf_impl_t *
vscf_aes128_kw_impl(vscf_aes128_kw_t *self);

//
//  Cast to the const 'vscf_impl_t' type.
//
VSCF_PUBLIC const vscf_impl_t *
vscf_aes128_kw_impl_const(const vscf_aes128_kw_t *self);

//
//  Perform initialization of preallocated implementation context.
//
VSCF_PUBLIC void
vscf_aes128_kw_init(vscf_aes128_kw_t *self);

//
//  Cleanup implementation context and release dependencies.
//  This is a reverse action of the function 'vscf_aes128_kw_init()'.
//
VSCF_PUBLIC void
vscf_aes128_kw_cleanup(vscf_aes128_kw_t *self);

//
//  Allocate implementation context and perform it's initialization.
//  Postcondition: check memory allocation result.
//
VSCF_PUBLIC vscf_aes128_kw_t *
vscf_aes128_kw_new(void);

//
//  Delete given implementation context and it's dependencies.
//  This is a reverse action of the function 'vscf_aes128_kw_new()'.
//
VSCF_PUBLIC void
vscf_aes128_kw_delete(vscf_aes128_kw_t *self);

//
//  Destroy given implementation context and it's dependencies.
//  This is a reverse action of the function 'vscf_aes128_kw_new()'.
//  Given reference is nullified.
//
VSCF_PUBLIC void
vscf_aes128_kw_destroy(vscf_aes128_kw_t **self_ref);

//
//  Copy given implementation context by increasing reference counter.
//
VSCF_PUBLIC vscf_aes128_kw_t *
vscf_aes128_kw_shallow_copy(vscf_aes128_kw_t *self);

//
//  Provide algorithm identificator.
//
VSCF_PUBLIC vscf_alg_id_t
vscf_aes128_kw_alg_id(const vscf_aes128_kw_t *self);

//
//  Produce object with algorithm information and configuration parameters.
//
VSCF_PUBLIC vscf_impl_t *
vscf_aes128_kw_produce_alg_info(const vscf_aes128_kw_t *self);

//
//  Restore algorithm configuration from the given object.
//
VSCF_PUBLIC vscf_status_t
vscf_aes128_kw_restore_alg_info(vscf_aes128_kw_t *self, const vscf_impl_t *alg_info) VSCF_NODISCARD;

//
//  Return buffer length required to hold a wrapped key for the given plain key length.
//
VSCF_PUBLIC size_t
vscf_aes128_kw_wrapped_len(const vscf_aes128_kw_t *self, size_t data_len);

//
//  Return buffer length required to hold an unwrapped key for the given wrapped key length.
//
VSCF_PUBLIC size_t
vscf_aes128_kw_unwrapped_len(const vscf_aes128_kw_t *self, size_t data_len);

//
//  Wrap given key data using the Key Encryption Key (KEK).
//
VSCF_PUBLIC vscf_status_t
vscf_aes128_kw_wrap(vscf_aes128_kw_t *self, vsc_data_t kek, vsc_data_t data, vsc_buffer_t *out) VSCF_NODISCARD;

//
//  Unwrap given key data using the Key Encryption Key (KEK).
//
VSCF_PUBLIC vscf_status_t
vscf_aes128_kw_unwrap(vscf_aes128_kw_t *self, vsc_data_t kek, vsc_data_t data, vsc_buffer_t *out) VSCF_NODISCARD;

// --------------------------------------------------------------------------
//  Generated section end.
// clang-format on
// --------------------------------------------------------------------------
//  @end

#ifdef __cplusplus
}
#endif

//  @footer
#endif // VSCF_AES128_KW_H_INCLUDED
//  @end